# adh6

./: .dockerignore  .env  .env.example  .env.local  .gitignore  .gitlab-ci.yml  .gitmodules  .prettierignore  .trivyignore  Makefile  README.md  STRUCTURE.md  compose.debug-api.yaml  compose.yaml  docker-compose-deploy.yml  docker-compose.yml  generate_api_code.sh  spec-to-code.sh
api_server/: .dockerignore  Dockerfile  OUIs.txt  common.py  dependency_injection.py  env.py  gen_keys.sh  import_keys.sh  main.py  manage.py  manage.sh  migrate.sh  pyproject.toml  requirements-test.txt  requirements.in  requirements.txt  script.sh  setup.cfg  start-dev.sh  start.sh  uwsgi-prod.template  uwsgi.ini
api_server/adh/: exceptions.py
api_server/adh/controller/: account.py  account_type.py  payment_method.py  product.py  snmp_port.py  transaction.py
api_server/adh6/: constants.py  context.py  custom_response_validator.py  error.py  exceptions.py  logging.py  resolver.py  server.py
api_server/adh6/authentication/: __init__.py  api_keys_manager.py  auth.py  enums.py  oidc_manager.py  role_manager.py  security.py
api_server/adh6/config/: configuration.py
api_server/adh6/decorator/: __init__.py  log_call.py  with_context.py
api_server/adh6/default/: __init__.py  crud_manager.py  crud_repository.py  http_handler.py
api_server/adh6/device/: README.md  __init__.py  device_ip_manager.py  device_logs_manager.py  device_manager.py  enums.py  utils.py
api_server/adh6/entity/: base_model_.py-e
api_server/adh6/member/: README.md  __init__.py  charter_manager.py  enums.py  mailinglist_manager.py  member_manager.py  notification_manager.py  subscription_manager.py
api_server/adh6/metrics/: __init__.py  health_manager.py
api_server/adh6/misc/: __init__.py  context.py  error.py  log.py  mac.py  validator.py
api_server/adh6/network/: README.md  __init__.py  port_manager.py  switch_manager.py
api_server/adh6/room/: README.md  __init__.py  room_manager.py
api_server/adh6/storage/: __init__.py
api_server/adh6/subnet/: __init__.py  vlan_manager.py
api_server/adh6/treasury/: __init__.py  account_manager.py  account_type_manager.py  cashbox_manager.py  payment_method_manager.py  product_manager.py  transaction_manager.py
api_server/adh6/util/: context.py
api_server/config/: .env.template  CONFIGURATION.template.py  TEST_CONFIGURATION.py  configuration.py
api_server/gpg_keys/: president.public.asc  respo-web.public.asc  secretaire.public.asc  tresorier.public.asc  vice-president.public.asc
api_server/gpg_keys/president/: pubring.kbx  pubring.kbx~  trustdb.gpg
api_server/gpg_keys/respo-web/: pubring.kbx  trustdb.gpg
api_server/gpg_keys/secretaire/: pubring.kbx  pubring.kbx~  trustdb.gpg
api_server/gpg_keys/tresorier/: pubring.kbx  trustdb.gpg
api_server/gpg_keys/vice-president/: pubring.kbx  trustdb.gpg
api_server/migrations/: 1ce37135a071_.py  396dbdf48d9f_.py  env.py
api_server/migrations/versions/: 14f293d2e9ba_.py  3de898713a29_.py  41969455ddc7_.py  42b6d10f03ce_.py  4aaf83cc7e73_.py  619c05692de3_.py  7e26955bb056_.py  8193644a753f_.py  81c7f88145f4_.py  9dbbddd53a6f_.py  a46ac86f2607_.py  a783db22eb4c_.py  ae0ea407f187_.py  b4a9673a9a38_.py  c32e77911bc8_.py  c8d08a3854a2_.py  ce42bf73c6c3_.py  d86cfea89f3e_.py  e9f2f8b13e37_.py  edd3aa89b387_.py  ff11eac619ec_.py
api_server/openapi/: swagger.yaml
api_server/src/: constants.py  exceptions.py
api_server/src/default/: crud_manager.py  http_handler.py
api_server/src/entity/: __init__.py  abstract_account.py  abstract_device.py  abstract_member.py  abstract_membership.py  abstract_payment_method.py  abstract_port.py  abstract_product.py  abstract_room.py  abstract_switch.py  abstract_transaction.py  abstract_vlan.py  account.py  account_type.py  admin.py  bank.py  body.py  bug_report.py  caisse.py  cashbox.py  device.py  error.py  inline_response200.py  labels.py  member.py  member_status.py  membership.py  membership_request.py  null.py  one_of_abstract_account_account_type.py  one_of_abstract_account_member.py  one_of_abstract_device_member.py  one_of_abstract_member_room.py  one_of_abstract_membership_account.py  one_of_abstract_membership_member.py  one_of_abstract_membership_payment_method.py  one_of_abstract_membership_products.py  one_of_abstract_port_room.py  one_of_abstract_port_switch.py  one_of_abstract_port_switch_obj.py  (+17 more)
api_server/src/use_case/: __init__.py  account_manager.py  account_type_manager.py  base_manager.py  bug_report_manager.py  caisse_manager.py  cashbox_manager.py  crud_manager.py  device_manager.py  health_manager.py  member_manager.py  oauth_manager.py  payment_method_manager.py  port_manager.py  product_manager.py  room_manager.py  stats_manager.py  switch_manager.py  transaction_manager.py  vlan_manager.py
api_server/src/util/: context.py  validator.py
api_server/test/: __init__.py  auth.py
api_server/test/integration/: conftest.py  context.py  resource.py  test_account.py  test_account_type.py  test_api_key.py  test_auth.py  test_bugs.py  test_cashbox.py  test_charter.py  test_device.py  test_health.py  test_mailinglist.py  test_member.py  test_membership.py  test_port.py  test_product.py  test_profile.py  test_role.py  test_room.py  test_switch.py  test_transaction.py
api_server/test/unit/: common_test.py  security_test.py
backend/: Dockerfile  alembic.ini  conftest.py  main.py  manage.py  pyproject.toml  start-dev.sh  start.sh
backend/adh6/: constants.py  context.py  database.py  exceptions.py  logging.py  main.py  security.py  typing_utils.py  util.py
backend/adh6/authentication/: __init__.py  api_keys_manager.py  enums.py  middleware.py  role_manager.py  router.py
backend/adh6/config/: configuration.py
backend/adh6/decorator/: log_call.py  with_context.py
backend/adh6/default/: __init__.py  crud_manager.py  crud_repository.py  http_handler.py
backend/migrations/: 44d8be632cdb_.py  4d45ccc4e1eb_.py  98c09e9578c6_.py  ae0ea407f187_.py  b4a9673a9a38_.py  b6b736a5f62e_.py  env.py
backend/scripts/: clean_netbox.py
backend/test/: __init__.py  auth.py
(+1331 files in other folders)
