# Docs:
# - User friendly: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# - Technical: https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata
# - Technical: https://packaging.python.org/en/latest/specifications/pyproject-toml/#declaring-project-metadata-the-project-table
# - UV: https://docs.astral.sh/uv/concepts/projects/config/#configuring-projects
#
# Related examples:
# - https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#a-full-example
[project]
name = "ADH6"
version = "6.0"  # https://packaging.python.org/en/latest/specifications/version-specifiers/
requires-python = "~=3.11.0"
dependencies = [
    # https://packaging.python.org/en/latest/specifications/dependency-specifiers/
    "flask",  # serveur HTTP pour recevoir / répondre aux requêtes
    "connexion[flask]",  # faire le lien entre la spec OpenAPI et les handlers Flask
    "swagger-ui-bundle",  # TODO: vérifier qu'il s'agisse de ce qui est utilisé par /api/ui
    "SQLAlchemy",  # ORM pour communiquer avec la base de donnée
    "flask-sqlalchemy-lite",
    "mysqlclient",  # TODO: vérifier qu'il s'agisse bien du driver
    "python-dateutil",  # Un ensemble d'utilitaires pour gérer une base de donnée
    "PyYAML",
    "jsonschema",
    "pysnmp<5.0.0",  # communiquer avec les switches
    "pyasn1<0.6.0",  # TODO: remove when pysnmp is updated
    "elasticsearch",  # ELK communication  # TODO: meilleurs explications
    "pinject",  # TODO: deprecated
    "python-dotenv",  # à priori inutile vu que Docker
    "requests",   # make HTTP web requests
    "Flask-Migrate",  # alembic bindings for flask  # TODO: cette lib dépend de flask-sqlalchemy mais on utilise flask-sqlalchemy-lite parce que voilà.
    "Flask-Caching",  # TODO: determiner l'utilité exacte (le cache)
    "authlib",  # TODO: vérifier qu'il s'agisse du support du CAS
    "cryptography",  # TODO: vérifier de quoi il s'agit
    "jinja2",  # TODO: devrait être inclus avec flask
    "bcrypt",  # TODO: vérifier de quoi il s'agit
    "Faker",  # TODO: vérifier de quoi il s'agit / si c'est du test-time only
    "opentelemetry-instrumentation-flask",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-jaeger",
]

# Docs:
# - User friendly: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-optional-dependencies
# - Technical: https://packaging.python.org/en/latest/specifications/dependency-specifiers/#dependency-specifiers
# - UV: https://docs.astral.sh/uv/concepts/projects/dependencies/#optional-dependencies
[project.optional-dependencies]
gunicorn = ["gunicorn", "uvicorn"]



# Docs:
# - Technical: https://packaging.python.org/en/latest/specifications/dependency-groups/ 
# - UV: https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "tox" },
    { include-group = "tests" },
]
tests = [  #
    "pytest",
    "pytest-coverage",
    "pytest-cases",
    "pytest-lazy-fixtures"
]
lint = ["pyright", "ruff"]
tox = ["tox", "tox-uv"]


# Docs:
# - pyright: https://microsoft.github.io/pyright/#/
[tool.pyright]
typeCheckingMode = "basic"  # TODO: passer en strict
include = ["adh6", "test"]
exclude = ["adh6/entity/*.py", "adh6/typing_utils.py", "adh6/util.py"]

# https://tox.wiki/en/latest/
[tool.tox]
envlist = ["py311"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run all checks on the code"
extras = ["dev"]
commands = [ #fmt
    ["ruff", "format", "--check"],
    ["ruff", "check"],
    ["pyright"],
]


# https://docs.astral.sh/ruff/
[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
src = ["adh6"]
exclude = ["migrations", "adh6/entity/*.py", "adh6/typing_utils.py", "adh6/util.py"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle Error
    "F",     # pyflakes
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "I",     # imports
    "S",     # bandit (security)
    "N",     # pep8-naming
    "ASYNC", # flake8-async
    "C4",    # flake8-compehensions
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "PYI",   # flake8-pyi
    "RSE",   # flake8-raise
    "SLOT",  # flake8-slots
    "INT",   # flake8-gettext
    "TRY",   # tryceratops
    "FLY",   # flynt
    "PERF",  # Perflint
    "FURB",  # refurb
    "LOG",   # flake8-logging
    "RUF",   # Ruff-specific-rules
    # "ERA",   # locate commented codes
    # "FIX",   # locate TODOs and FIXME
    # "PTH",   # flake8-use-pathlib (maybe todo ?)
    # "TID",   # flake8-tidy-imports (maybe todo ?)
    # "SLF",   # flake8-self  (managed by pyright)
    # "RET",   # flake8-return
    # "Q",     # flake8-quotes
    # "T20",   # flake8-print
    # "DTZ",   # flake8-datetimez (TODO)
    # "B",     # flake8-bugbear
]
ignore = [
    "E501", # line too long (we relate on the formater)
    "N818", # Error suffix for exceptions names
    "PIE796", # Enum contains duplicate value
    "TRY003", # Avoid specifying long messages outsides the exception class
    "ISC001", # To avoid conflicts with the formatter
]
dummy-variable-rgx = '^\*{0,2}(_$|__$|unused_|dummy_)'

[tool.ruff.lint.extend-per-file-ignores]
"test/**/*.py" = [
    "S101", # asserts allowed in tests...
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()

    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "S105", # Possible hardcoded password
    "S106", # Possible hardcoded password
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = [
    "test/"
]
addopts = "-vvv --cov --cov-fail-under=75 --cov-report=html --cov-report=term"

[tool.coverage.run]
branch = true
omit = [
    "test/*",
    "adh6/entity/*",
    "venv/*",
    "migration/*",
    ".vscode/*",
    "adh6/typing_utils.py",
    "adh6/util.py"
]
